// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"config" option should throw an error on the invalid config: errors 1`] = `
Array [
  "ModuleBuildError: Module build failed (from \`replaced original path\`):
Error: invalid postcss config",
]
`;

exports[`"config" option should throw an error on the invalid config: warnings 1`] = `Array []`;

exports[`"config" option should throw an error on the unresolved config: errors 1`] = `
Array [
  "ModuleBuildError: Module build failed (from \`replaced original path\`):
Error: No PostCSS Config found in: /test/fixtures/config-scope/css/unresolve.js",
]
`;

exports[`"config" option should throw an error on the unresolved config: warnings 1`] = `Array []`;

exports[`"config" option should work "String" value (relative path): css 1`] = `
"a { color: rgba(0, 0, 0, 1.0) }

.foo {
  float: right;
}
"
`;

exports[`"config" option should work "String" value (relative path): errors 1`] = `Array []`;

exports[`"config" option should work "String" value (relative path): warnings 1`] = `Array []`;

exports[`"config" option should work resolve "from" and "to" options: css 1`] = `
"a { color: black }

.foo {
  float: right;
}
"
`;

exports[`"config" option should work resolve "from" and "to" options: errors 1`] = `Array []`;

exports[`"config" option should work resolve "from" and "to" options: source map 1`] = `
Object {
  "file": "style.css",
  "mappings": "AAAA,IAAI,aAAa;;AAEjB;EACE,YAAY;AACd",
  "names": Array [],
  "sourceRoot": "",
  "sources": Array [
    "style.css",
  ],
  "sourcesContent": Array [
    "a { color: black }

.foo {
  float: right;
}
",
  ],
  "version": 3,
}
`;

exports[`"config" option should work resolve "from" and "to" options: warnings 1`] = `Array []`;

exports[`"config" option should work with "String" value (absolute path): css 1`] = `
"a { color: rgba(0, 0, 0, 1.0) }

.foo {
  float: right;
}
"
`;

exports[`"config" option should work with "String" value (absolute path): errors 1`] = `Array []`;

exports[`"config" option should work with "String" value (absolute path): warnings 1`] = `Array []`;

exports[`"config" option should work with "String" value (with path to the directory with the configuration): css 1`] = `
"a { color: rgba(0, 0, 0, 1.0) }

.foo {
  float: right;
}
"
`;

exports[`"config" option should work with "String" value (with path to the directory with the configuration): errors 1`] = `Array []`;

exports[`"config" option should work with "String" value (with path to the directory with the configuration): warnings 1`] = `Array []`;

exports[`"config" option should work with "String" value and respect all options: css 1`] = `
"a {
  color: black
}

/*# sourceMappingURL=data:application/json;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbInN0eWxlLnNzcyJdLCJuYW1lcyI6W10sIm1hcHBpbmdzIjoiQUFBQTtFQUNFO0FBREYiLCJmaWxlIjoic3R5bGUuY3NzIiwic291cmNlc0NvbnRlbnQiOlsiYVxuICBjb2xvcjogYmxhY2tcbiJdfQ== */"
`;

exports[`"config" option should work with "String" value and respect all options: errors 1`] = `Array []`;

exports[`"config" option should work with "String" value and respect all options: warnings 1`] = `Array []`;

exports[`"config" option should work with "false" value: css 1`] = `
"a { color: black }

.foo {
  float: right;
}
"
`;

exports[`"config" option should work with "false" value: errors 1`] = `Array []`;

exports[`"config" option should work with "false" value: warnings 1`] = `Array []`;

exports[`"config" option should work with "package.json" configuration: css 1`] = `
".import {
  color: red;
}

.test {
  color: blue;
}
"
`;

exports[`"config" option should work with "package.json" configuration: errors 1`] = `Array []`;

exports[`"config" option should work with "package.json" configuration: warnings 1`] = `Array []`;

exports[`"config" option should work with "true" value: css 1`] = `
"a { color: rgba(0, 0, 0, 1.0) }

.foo {
  float: right;
}
"
`;

exports[`"config" option should work with "true" value: errors 1`] = `Array []`;

exports[`"config" option should work with "true" value: warnings 1`] = `Array []`;

exports[`"config" option should work with the "postcssOptions" option: css 1`] = `
"a { color: rgba(0, 0, 0, 1.0) }

[dir=ltr] .foo { float: right;
}

[dir=rtl] .foo {
  float: left;
}
"
`;

exports[`"config" option should work with the "postcssOptions" option: errors 1`] = `Array []`;

exports[`"config" option should work with the "postcssOptions" option: warnings 1`] = `Array []`;

exports[`"config" option should work without the specified value in the "postcssOptions" option: css 1`] = `
"a { color: rgba(0, 0, 0, 1.0) }

.foo {
  float: right;
}
"
`;

exports[`"config" option should work without the specified value in the "postcssOptions" option: errors 1`] = `Array []`;

exports[`"config" option should work without the specified value in the "postcssOptions" option: warnings 1`] = `Array []`;

exports[`"config" option should work without the specified value: css 1`] = `
"a { color: rgba(0, 0, 0, 1.0) }

.foo {
  float: right;
}
"
`;

exports[`"config" option should work without the specified value: errors 1`] = `Array []`;

exports[`"config" option should work without the specified value: warnings 1`] = `Array []`;
